--- a/package.json
+++ b/package.json
@@ -3,62 +3,69 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "1.3.2",
-    "@testing-library/jest-dom": "5.1.1",
-    "@testing-library/react": "10.0.1",
-    "@types/fontfaceobserver": "0.0.6",
-    "@types/history": "4.7.5",
-    "@types/jest": "25.1.4",
-    "@types/node": "13.9.3",
-    "@types/react": "16.9.25",
-    "@types/react-dom": "16.9.3",
-    "@types/react-helmet": "5.0.15",
-    "@types/react-redux": "7.1.7",
-    "@types/react-router-dom": "5.1.3",
-    "@types/react-test-renderer": "16.9.2",
-    "@types/styled-components": "5.0.1",
-    "@types/testing-library__jest-dom": "5.0.2",
-    "@types/webpack-env": "1.15.1",
+    "@reduxjs/toolkit": "1.3.5",
+    "antd": "4.2.0",
     "connected-react-router": "6.8.0",
     "cross-env": "7.0.2",
-    "eslint-config-prettier": "6.10.1",
-    "eslint-plugin-prettier": "3.1.2",
+    "eslint-config-prettier": "6.11.0",
+    "eslint-plugin-prettier": "3.1.3",
     "fontfaceobserver": "2.1.0",
     "history": "4.10.1",
-    "husky": "4.2.3",
-    "i18next": "19.3.4",
-    "i18next-browser-languagedetector": "4.0.2",
+    "husky": "4.2.5",
+    "i18next": "19.4.4",
+    "i18next-browser-languagedetector": "4.1.1",
     "jest-styled-components": "7.0.2",
-    "lint-staged": "10.0.8",
+    "lint-staged": "10.2.1",
     "node-plop": "0.25.0",
     "plop": "2.6.0",
-    "prettier": "2.0.1",
-    "react": "16.13.0",
+    "react": "16.13.1",
     "react-app-polyfill": "1.0.6",
-    "react-dom": "16.13.0",
-    "react-helmet-async": "1.0.4",
-    "react-i18next": "11.3.4",
+    "react-dom": "16.13.1",
+    "react-helmet-async": "1.0.5",
+    "react-i18next": "11.4.0",
     "react-redux": "7.2.0",
     "react-router-dom": "5.1.2",
     "react-scripts": "3.4.1",
-    "react-test-renderer": "16.13.0",
+    "react-test-renderer": "16.13.1",
     "redux-injectors": "1.3.0",
     "redux-saga": "1.1.3",
     "sanitize.css": "11.0.0",
     "serve": "11.3.0",
-    "shelljs": "0.8.3",
-    "styled-components": "5.0.1",
-    "stylelint": "13.2.1",
+    "shelljs": "0.8.4",
+    "styled-components": "5.1.0",
+    "stylelint": "13.3.3",
     "stylelint-config-recommended": "3.0.0",
     "stylelint-config-styled-components": "0.1.1",
     "stylelint-processor-styled-components": "1.10.0",
-    "ts-node": "8.8.2",
-    "typescript": "3.8.2"
+    "ts-node": "8.9.1",
+    "typescript": "3.8.3"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "5.5.0",
+    "@testing-library/react": "10.0.3",
+    "@types/fontfaceobserver": "0.0.6",
+    "@types/history": "4.7.5",
+    "@types/jest": "25.2.1",
+    "@types/node": "13.13.4",
+    "@types/react": "16.9.34",
+    "@types/react-dom": "16.9.7",
+    "@types/react-helmet": "5.0.15",
+    "@types/react-redux": "7.1.7",
+    "@types/react-router-dom": "5.1.5",
+    "@types/react-test-renderer": "16.9.2",
+    "@types/styled-components": "5.1.0",
+    "@types/testing-library__jest-dom": "5.0.3",
+    "@types/webpack-env": "1.15.2",
+    "babel-plugin-import": "1.13.0",
+    "customize-cra": "0.9.1",
+    "eslint-plugin-simple-import-sort": "5.0.3",
+    "prettier": "2.0.5",
+    "react-app-rewired": "2.1.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject",
     "test:generators": "ts-node --project=./internals/ts-node.tsconfig.json ./internals/testing/test-generators.ts",
     "start:prod": "yarn build && serve -s build",
@@ -100,11 +107,6 @@
     "*.{md,json}": [
       "prettier --write"
     ]
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
   },
   "jest": {
     "collectCoverageFrom": [
