--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "plop": "2.6.0",
     "react": "16.13.1",
     "react-app-polyfill": "1.0.6",
+    "react-custom-scrollbars": "4.2.1",
     "react-dom": "16.13.1",
     "react-helmet-async": "1.0.5",
     "react-i18next": "11.4.0",
