--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-hook/window-size": "2.0.4",
     "@reduxjs/toolkit": "1.3.5",
     "antd": "4.2.0",
     "connected-react-router": "6.8.0",
@@ -20,13 +21,13 @@
     "plop": "2.6.0",
     "react": "16.13.1",
     "react-app-polyfill": "1.0.6",
-    "react-custom-scrollbars": "4.2.1",
     "react-dom": "16.13.1",
     "react-helmet-async": "1.0.5",
     "react-i18next": "11.4.0",
     "react-redux": "7.2.0",
     "react-router-dom": "5.1.2",
     "react-scripts": "3.4.1",
+    "react-scrollbars-custom": "4.0.21",
     "react-test-renderer": "16.13.1",
     "redux-injectors": "1.3.0",
     "redux-saga": "1.1.3",
