--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,5 +21,8 @@
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "jest.autoEnable": false,
-  "jest.runAllTestsFirst": false
+  "jest.runAllTestsFirst": false,
+  "cSpell.words": [
+    "antd"
+  ]
 }
