--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
     "editor.defaultFormatter": "esbenp.prettier-vscode",
     "editor.tabSize": 2
   },
+  "files.eol": "\n",
   "typescript.updateImportsOnFileMove.enabled": "always",
   "javascript.updateImportsOnFileMove.enabled": "always",
   "vsicons.projectDetection.autoReload": true,
@@ -22,7 +23,5 @@
   },
   "jest.autoEnable": false,
   "jest.runAllTestsFirst": false,
-  "cSpell.words": [
-    "antd"
-  ]
+  "cSpell.words": ["antd"]
 }
