--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "16.13.1",
     "react-helmet-async": "1.0.6",
     "react-i18next": "11.4.0",
+    "react-lottie": "1.2.3",
     "react-redux": "7.2.0",
     "react-router-dom": "5.1.2",
     "react-scripts": "3.4.1",
@@ -52,6 +53,7 @@
     "@types/react": "16.9.34",
     "@types/react-dom": "16.9.7",
     "@types/react-helmet": "5.0.15",
+    "@types/react-lottie": "1.2.3",
     "@types/react-redux": "7.1.8",
     "@types/react-router-dom": "5.1.5",
     "@types/react-test-renderer": "16.9.2",
