--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-scripts": "3.4.1",
     "react-scrollbars-custom": "4.0.21",
     "react-test-renderer": "16.13.1",
+    "recharts": "1.8.5",
     "redux-injectors": "1.3.0",
     "redux-saga": "1.1.3",
     "sanitize.css": "11.0.0",
@@ -57,6 +58,7 @@
     "@types/react-redux": "7.1.8",
     "@types/react-router-dom": "5.1.5",
     "@types/react-test-renderer": "16.9.2",
+    "@types/recharts": "1.8.10",
     "@types/styled-components": "5.1.0",
     "@types/testing-library__jest-dom": "5.0.3",
     "@types/webpack-env": "1.15.2",
