--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "husky": "4.2.5",
     "i18next": "19.4.4",
     "i18next-browser-languagedetector": "4.1.1",
+    "i18next-icu": "1.3.1",
     "jest-styled-components": "7.0.2",
     "lint-staged": "10.2.2",
     "node-plop": "0.25.0",
