--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lint-staged": "10.2.2",
     "node-plop": "0.25.0",
     "plop": "2.6.0",
+    "query-string": "6.12.1",
     "react": "16.13.1",
     "react-app-polyfill": "1.0.6",
     "react-dom": "16.13.1",
