--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "antd": "4.2.0",
     "connected-react-router": "6.8.0",
     "cross-env": "7.0.2",
+    "debounce": "1.2.0",
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-prettier": "3.1.3",
     "fontfaceobserver": "2.1.0",
