--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,4 @@
 BROWSER=none
 EXTEND_ESLINT=true
 REACT_APP_MOCK=false
-REACT_APP_BASE_URL="http://localhost:3000/"
+REACT_APP_BASE_URL="http://192.168.1.120:3000/"
