--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
 GENERATE_SOURCEMAP=false
 REACT_APP_MOCK=false
-REACT_APP_BASE_URL="http://localhost:3000/"
+REACT_APP_BASE_URL="http://192.168.1.120:3000/"
