--- a/package.json
+++ b/package.json
@@ -3,70 +3,72 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@react-hook/window-size": "2.0.4",
-    "@reduxjs/toolkit": "1.3.5",
-    "antd": "4.2.0",
+    "@react-hook/window-size": "3.0.6",
+    "@reduxjs/toolkit": "1.3.6",
+    "antd": "4.3.3",
+    "antd-jalali-moment": "3.3.2",
     "connected-react-router": "6.8.0",
     "cross-env": "7.0.2",
     "debounce": "1.2.0",
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-prettier": "3.1.3",
     "fontfaceobserver": "2.1.0",
-    "history": "4.10.1",
+    "history": "4.10.0",
     "husky": "4.2.5",
-    "i18next": "19.4.4",
-    "i18next-browser-languagedetector": "4.1.1",
-    "i18next-icu": "1.3.1",
+    "i18next": "19.4.5",
+    "i18next-browser-languagedetector": "4.2.0",
+    "i18next-icu": "1.4.2",
+    "jalali-moment": "3.3.8",
     "jest-styled-components": "7.0.2",
-    "lint-staged": "10.2.2",
-    "node-plop": "0.25.0",
-    "plop": "2.6.0",
-    "query-string": "6.12.1",
+    "lint-staged": "10.2.10",
+    "node-plop": "0.26.0",
+    "plop": "2.7.1",
+    "query-string": "6.13.1",
     "react": "16.13.1",
     "react-app-polyfill": "1.0.6",
     "react-dom": "16.13.1",
     "react-helmet-async": "1.0.6",
-    "react-i18next": "11.4.0",
+    "react-i18next": "11.5.1",
     "react-lottie": "1.2.3",
     "react-redux": "7.2.0",
-    "react-router-dom": "5.1.2",
+    "react-router-dom": "5.2.0",
     "react-scripts": "3.4.1",
-    "react-scrollbars-custom": "4.0.21",
+    "react-scrollbars-custom": "4.0.25",
     "react-test-renderer": "16.13.1",
     "recharts": "1.8.5",
     "redux-injectors": "1.3.0",
     "redux-saga": "1.1.3",
-    "sanitize.css": "11.0.0",
-    "serve": "11.3.0",
+    "sanitize.css": "11.0.1",
+    "serve": "11.3.2",
     "shelljs": "0.8.4",
-    "styled-components": "5.1.0",
-    "stylelint": "13.3.3",
+    "styled-components": "5.1.1",
+    "stylelint": "13.6.0",
     "stylelint-config-recommended": "3.0.0",
     "stylelint-config-styled-components": "0.1.1",
     "stylelint-processor-styled-components": "1.10.0",
-    "ts-node": "8.10.1",
-    "typescript": "3.8.3"
+    "ts-node": "8.10.2",
+    "typescript": "3.9.5"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "5.5.0",
-    "@testing-library/react": "10.0.4",
+    "@testing-library/jest-dom": "5.10.0",
+    "@testing-library/react": "10.2.1",
     "@types/fontfaceobserver": "0.0.6",
-    "@types/history": "4.7.5",
-    "@types/jest": "25.2.1",
-    "@types/node": "13.13.4",
-    "@types/react": "16.9.34",
-    "@types/react-dom": "16.9.7",
-    "@types/react-helmet": "5.0.15",
-    "@types/react-lottie": "1.2.3",
-    "@types/react-redux": "7.1.8",
+    "@types/history": "4.7.6",
+    "@types/jest": "26.0.0",
+    "@types/node": "14.0.13",
+    "@types/react": "16.9.36",
+    "@types/react-dom": "16.9.8",
+    "@types/react-helmet": "6.0.0",
+    "@types/react-lottie": "1.2.5",
+    "@types/react-redux": "7.1.9",
     "@types/react-router-dom": "5.1.5",
     "@types/react-test-renderer": "16.9.2",
-    "@types/recharts": "1.8.10",
+    "@types/recharts": "1.8.12",
     "@types/styled-components": "5.1.0",
-    "@types/testing-library__jest-dom": "5.0.3",
+    "@types/testing-library__jest-dom": "5.9.1",
     "@types/webpack-env": "1.15.2",
     "babel-plugin-import": "1.13.0",
-    "customize-cra": "0.9.1",
+    "customize-cra": "1.0.0",
     "eslint-plugin-simple-import-sort": "5.0.3",
     "prettier": "2.0.5",
     "react-app-rewired": "2.1.6"
