--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debounce": "1.2.0",
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-prettier": "3.1.3",
+    "file-saver": "2.0.2",
     "fontfaceobserver": "2.1.0",
     "history": "4.10.0",
     "husky": "4.2.5",
@@ -47,7 +48,8 @@
     "stylelint-config-styled-components": "0.1.1",
     "stylelint-processor-styled-components": "1.10.0",
     "ts-node": "8.10.2",
-    "typescript": "3.9.5"
+    "typescript": "3.9.5",
+    "xlsx": "0.16.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "5.10.0",
