--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@reduxjs/toolkit": "1.3.6",
     "antd": "4.3.3",
     "antd-jalali-moment": "3.3.2",
+    "axios": "0.19.2",
     "connected-react-router": "6.8.0",
     "cross-env": "7.0.2",
     "debounce": "1.2.0",
